k8s/cluster2/base/kafka/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: kafka-main-cluster
---
apiVersion: v1
kind: Namespace
metadata:
  name: kafka-project-1
---
apiVersion: v1
kind: Namespace
metadata:
  name: kafka-project-2
---
apiVersion: v1
kind: Namespace
metadata:
  name: kafka-project-3
---
apiVersion: v1
kind: Namespace
metadata:
  name: kafka-project-4
---
apiVersion: v1
kind: Namespace
metadata:
  name: kafka-project-5
